<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DroidTool</string>
    <string name="title_screen">Screen</string>
    <string name="title_font">Font</string>
    <string name="title_storage">Storage</string>
    <string name="title_drawable">Drawable</string>
    <string name="title_model">Model</string>
    <string name="title_fragmentdemo">FragmentDemo</string>
    <string name="title_servicedemo">ServiceDemo</string>
    <string name="title_contentproviderdemo">ContentProviderDemo</string>
    <string name="title_section4">Font(22sp)</string>
    <string name="title_section5">Section 5</string>
    <string name="title_section6">Section 6</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="text_line_spacing_demo">Conquer Mobile is a mobile design specialist, creating iPad apps for enterprise mobile productivity. Conquer Mobile has built award-winning apps.</string>

    <string-array name="font_type_face">
        <item>default</item>
        <item>sans-serif</item>
        <item>serif</item>
        <item>monospace</item>
    </string-array>

    <string-array name="font_style">
        <item>normal</item>
        <item>bold</item>
        <item>italic</item>
    </string-array>

    <string-array name="font_size">
        <item>12sp</item>
        <item>14sp</item>
        <item>18sp</item>
        <item>22sp</item>
    </string-array>

    <string name="screen_layout_size">Screen Layout Size:</string>
    <string name="logical_display_density">Logical Display Density:</string>
    <string name="display_density_dpi">Display Density DPI:</string>
    <string name="screen_aspect_ratio">Screen Aspect Ratio:</string>
    <string name="current_screen_orientation">Screen Orientation:</string>
    <string name="screen_width_in_pixels">Screen Width (in pixels):</string>
    <string name="screen_height_in_pixels">Screen Height (in pixels):</string>
    <string name="screen_width_in_dp">Screen Width (in dp):</string>
    <string name="screen_height_in_dp">Screen Height (in dp):</string>
    <string name="smallest_screen_width">Smallest Screen Width (in dp):</string>
    <string name="all_storage_label">All Storage Info:</string>
    <string name="definied_environment_label">Definied Environment Info:</string>
    <string name="definied_external_label">Definied External Info:</string>
    <string name="media_store_label">Media Store Info:</string>

    <string-array name="color_filter_mode">
        <item>NULL</item>
        <item>ADD</item>
        <item>CLEAR</item>
        <item>DRAKEN</item>
        <item>DST</item>
        <item>DST_ATOP</item>
        <item>DST_IN</item>
        <item>DST_OUT</item>
        <item>DST_OVER</item>
        <item>DST_LIGHTEN</item>
        <item>LIGHTEN</item>
        <item>MULTIPLY</item>
        <item>OVERLAY</item>
        <item>SCREEN</item>
        <item>SRC</item>
        <item>SRC_ATOP</item>
        <item>SRC_IN</item>
        <item>SRC_OUT</item>
        <item>SRC_OVER</item>
        <item>XOR</item>
    </string-array>

    <string-array name="color_filter_color">
        <item>NULL</item>
        <item>red</item>
        <item>green</item>
        <item>blue</item>
        <item>yellow</item>
        <item>black</item>
        <item>white</item>
    </string-array>

    <string name="start_to_work_button_text">Start to Work</string>
    <string name="work_fragment_reinstance_text">Fragment Reinstance</string>
    <string name="async_task_parallel_text">AsyncTask Parellel Execute</string>
    <string name="save_view_status_text">Save View Status</string>
    <string name="bind_service_button_text">Bind Service</string>
    <string name="unbind_service_button_text">Unbind Service</string>
    <string name="start_service_button_text">Start Service</string>
    <string name="stop_service_button_text">Stop Service</string>
    <string name="please_bind_service_before_unbind">Please bind service first!</string>

    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>

</resources>
