<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hufeng.droidtools.ScreenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

    <TextView
        android:id="@+id/screen_layout_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_layout_size"/>

    <TextView
        android:id="@+id/logical_display_density"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/logical_display_density"/>

    <TextView
        android:id="@+id/display_density_dpi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/display_density_dpi"/>

    <TextView
        android:id="@+id/screen_aspect_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_aspect_ratio"/>

    <TextView
        android:id="@+id/current_screen_orientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/current_screen_orientation"/>

    <TextView
        android:id="@+id/screen_width_in_pixels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_width_in_pixels"/>

    <TextView
        android:id="@+id/screen_height_in_pixels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_height_in_pixels"/>

    <TextView
        android:id="@+id/screen_width_in_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_width_in_dp"/>

    <TextView
        android:id="@+id/screen_height_in_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/screen_height_in_dp"/>

    <TextView
        android:id="@+id/smallest_screen_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:text="@string/smallest_screen_width"/>

    </LinearLayout>
</ScrollView>