<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hufeng.droidtools.FragmentDemoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_bindService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_service_button_text" />

        <Button
            android:id="@+id/btn_unbindService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unbind_service_button_text"/>

        <Button
            android:id="@+id/btn_startService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service_button_text"/>

        <Button
            android:id="@+id/btn_stopService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service_button_text"/>

        <TextView
            android:id="@+id/tv_status_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="48dp"
            android:text="status info\n"/>

    </LinearLayout>
</ScrollView>