<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hufeng.droidtools.FragmentDemoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_start_to_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_to_work_button_text" />

        <CheckBox
            android:id="@+id/cb_work_fragment_reinstance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/work_fragment_reinstance_text"/>

        <CheckBox
            android:id="@+id/cb_asynctask_parallel_execute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/async_task_parallel_text"/>

        <CheckBox
            android:id="@+id/cb_save_view_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/save_view_status_text"/>


        <TextView
            android:id="@+id/tv_progress_info"
            android:layout_marginTop="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="work progress:\n"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>